--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp start",
+    "buils": "gulp build",
+    "test": "npm eslint ."
   },
   "author": "Vladimir Drannikov",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "autoprefixer": "^9.7.5",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2"
   }
